<package>
  <name>saw_atracsys_fusion_track_examples</name>
  <version>1.1.0</version>
  <description>
  sawAtracsysFusionTrack Examples
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawAtracsysFusionTrack</url>

  <build_depend>cisst</build_depend>
  <build_depend>saw_atracsys_fusion_track</build_depend>

  <run_depend>cisst</run_depend>
  <run_depend>saw_atracsys_fusion_track</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
