<package>
  <name>saw_atracsys_fusion_track</name>
  <version>1.1.0</version>
  <description>
  sawAtracsysFusionTrack
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawAtracsysFusionTrack</url>

  <build_depend>cisst</build_depend>
  <run_depend>cisst</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
